# witter

./: .gitignore  ProjectNotes.md  README.md  scratch.txt
backend/: Cargo.toml
backend/src/: env.rs  main.rs  main.rs.OLD  middlewares.rs  responses.rs
backend/src/endpoints/: me.rs  mod.rs  tweets.rs  users.rs
backend/src/tests/: follows.rs  logout.rs  mod.rs  posting_tweets.rs  test_helpers.rs  timeline.rs  user_creation.rs  users.rs
backend/src/tests/test_helpers/: test_db.rs
frontend/: Cargo.toml
frontend/src/: api.rs  lib.rs
frontend/src/view/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs  payloads.rs  responses.rs
