[package]
name = "backend"
version = "0.1.0"
authors = ["ken <kenl09@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.2", features = [ "unstable", "attributes" ]}
tide = "0.13.0"
sqlx = { version = "0.3.5", features = [ "runtime-async-std", "macros", "json", "chrono", "postgres", "uuid" ]}
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
chrono = "0.4.13"
log = "0.4.11"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
uuid = { version = "0.8.1", features = ["serde"] }
thiserror = "1.0.20"
futures = { version = "0.3", features = ["compat"] }
rand = "0.7.3"
argonautica = "0.2.0"
lazy_static = "1.4.0"
shared = { path = "../shared", version = "0.1.0" }
async-trait = "0.1.36"
regex = "1.3.9"
failure = "0.1.8"


[dev-dependencies]
assert-json-diff = "1.1.0"
