[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["kenl09@gmail.com"]
description = "Frontend for Witter"
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
# This commit points to Seed 0.7.0 with important fixes.
# Replace with `seed = "0.8.0"` (or newer) once released.
seed = { git = "https://github.com/seed-rs/seed", rev = "b25cf59" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
shared = { path = "../shared", version = "0.1.0" }
http-types = "2.4.0"

#[profile.release]
#lto = true
#opt-level = 'z'
#codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
